# Lyne

./: .gitignore  Cargo.toml  LICENSE  README - 副本.md  README.md  build.rs
.codex-phase0-check/appdata/: audio_settings.json
.trellis/spec/backend/: quality-guidelines.md
.trellis/tasks/06-02-streaming-first-buffer-playback-kernel/: prd.md  task.json
.trellis/tasks/06-02-streaming-first-buffer-playback-kernel/research/: release-benchmark-results.md
.trellis/tasks/06-03-reduce-false-playback-recovery/: prd.md  task.json
.trellis/tasks/06-03-reduce-false-playback-recovery/research/: recovery-watchdog-results.md
.trellis/workspace/Asaiuta/: index.md  journal-1.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
apps/desktop/docs/: performance-measurement.md
apps/desktop/scripts/: build-sidecar.mjs  electron-real-file-playback-baseline.cjs  electron-realtime-playback-baseline.cjs  electron-webaudio-baseline.cjs  lyne-active-playback-control-probe.cjs  lyne-library-scan-evidence.cjs  lyne-playback-latency-benchmark.cjs  lyne-playback-stability-benchmark.cjs  lyne-real-library-benchmark.cjs  measure-route-loads.mjs  perf-utils.cjs  report-bundle-size.mjs  run-focused-tests.mjs  splayer-library-benchmark.cjs  tauri-wrapper.ps1
apps/desktop/src/: main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/: App.tsx  PlaybackContext.tsx  ncmCoverResolution.ts  playbackDisplayClock.test.ts  playbackDisplayClock.ts  playbackSocketContracts.ts  useAppController.ts  useNavigationController.ts  useNcmTrackEnrichment.test.ts  useNcmTrackEnrichment.ts  usePlaybackCommands.test.ts  usePlaybackCommands.ts  usePlaybackController.test.ts  usePlaybackController.ts  usePlaybackSocket.test.ts  usePlaybackSocket.ts
apps/desktop/src/components/: AlbumCard.tsx  AppShell.tsx  AppearanceLayer.tsx  BackgroundLayer.tsx  ContentArea.tsx  CoverArt.tsx  CreatePlaylistModal.tsx  DailySongsCard.tsx  EmptyState.tsx  FullPlayer.tsx  HorizontalCardRow.tsx  LoginModal.tsx  Modal.tsx  (+11 more)
benches/: audio_biquad_perf.rs  audio_callback_chain_perf.rs  audio_callback_output_path_perf.rs  audio_convolver_perf.rs  audio_decode_preload_perf.rs  audio_derived_constants_perf.rs  audio_overall_perf.rs  audio_quality_measurements.rs  audio_resampler_streaming_perf.rs  audio_spectrum_handoff_perf.rs  backend_library_scan_perf.rs  backend_ws_event_fanout_perf.rs  playback_load_budget_perf.rs
crates/audio-runtime-paths/: Cargo.toml
crates/audio-runtime-paths/src/: lib.rs
docs/performance/: playback-latency-benchmark.md  real-library-benchmark.md
migrations/: 001_baseline.sql  003_indexes.sql
output/playwright/: naive_dropdown_probe.mjs  naive_popconfirm_probe.mjs  naive_popover_probe.mjs
scripts/: build_all.ps1
src/: app_database.rs  config.rs  decoder.rs  lib.rs  main.rs  metadata.rs  migration.rs  pipeline.rs  playlist.rs  runtime.rs  server.rs  settings.rs  wasapi_output.rs  webdav.rs
src/app_database/: library_media.rs  local_playlists.rs  media_items.rs  tests.rs  types.rs
src/decoder/: error.rs  metadata.rs  source.rs  streaming.rs  tests.rs
src/player/: audio_thread.rs  bench_support.rs  callback.rs  command_handlers.rs  effects_api.rs  gapless.rs  loading.rs  mod.rs  output_stream.rs  playback_config.rs  spectrum.rs  state.rs  track_loudness.rs  wasapi_loop.rs
src/processor/: adapters.rs  automix_analysis.rs  convolver.rs  crossfeed.rs  dsp.rs  dsp_chain.rs  dynamic_loudness.rs  eq.rs  fir_eq.rs  lockfree_params.rs  loudness.rs  loudness_db.rs  mod.rs  resampler.rs  saturation.rs  spectrum.rs
src/processor/loudness/: limiter.rs  meter.rs
src/server/: auth.rs  diagnostics.rs  effects.rs  lyrics.rs  netease.rs  playback.rs  settings_handlers.rs  state_helpers.rs  webdav_handlers.rs  ws_events.rs  ws_handlers.rs
src/server/netease/: accounts.rs  cloud.rs  discover.rs  parsers.rs  playback_actions.rs  playlists.rs  proxy.rs  routes.rs  search.rs  tests.rs  tracks.rs  types.rs
src/server/playback/: analysis.rs  automix_handlers.rs  device_config.rs  library.rs  library_domain_handlers.rs  library_scan.rs  loudness_handlers.rs  media_assets.rs  ncm_scrobble.rs  playlist_handlers.rs  queue_handlers.rs  queue_state.rs  routes.rs  transport.rs  types.rs
(+299 files in other folders)
