[package]
name = "audio_engine"
version = "2.0.0"
edition = "2021"
description = "Hi-Fi Audio Engine - Full Rust Native"

[lib]
name = "audio_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "audio_server"
path = "src/main.rs"

[[bench]]
name = "audio_convolver_perf"
harness = false

[[bench]]
name = "audio_limiter_perf"
harness = false

[[bench]]
name = "audio_derived_constants_perf"
harness = false

[[bench]]
name = "audio_lockfree_params_perf"
harness = false

[[bench]]
name = "audio_overall_perf"
harness = false

[[bench]]
name = "audio_callback_chain_perf"
harness = false

[[bench]]
name = "audio_callback_output_path_perf"
harness = false

[[bench]]
name = "audio_resampler_streaming_perf"
harness = false

[[bench]]
name = "audio_spectrum_handoff_perf"
harness = false

[[bench]]
name = "audio_decode_preload_perf"
harness = false

[[bench]]
name = "audio_biquad_perf"
harness = false

[[bench]]
name = "audio_truepeak_perf"
harness = false

[[bench]]
name = "audio_quality_measurements"
harness = false

[[bench]]
name = "playback_load_budget_perf"
harness = false

[[bench]]
name = "backend_ws_event_fanout_perf"
harness = false

[[bench]]
name = "backend_library_scan_perf"
harness = false

[dependencies]
audio-runtime-paths = { path = "crates/audio-runtime-paths" }
# --- Core Audio ---
symphonia = { version = "0.5", features = ["all"] }
lofty = "0.22"
cpal = "0.15"
soxr = "0.6.0"   # Restored for f64 Hi-Fi SoX VHQ resampling

# --- Parallelism ---
rayon = "1.10"
crossbeam = "0.8"
jwalk = "0.8"
parking_lot = "0.12"

# --- WASAPI Exclusive Mode (Windows only) ---
[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

# --- HTTP/WebSocket Server ---
actix-cors = "0.7"
actix-web = "4"
actix-ws = "0.3"
actix-rt = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- DSP ---
rustfft = "6.2"
rand = "0.8"
ebur128 = "0.1"           # EBU R128 loudness measurement
atomic_float = "1.0"      # Atomic floating point types
arc-swap = "1.7"           # Lock-free Arc pointer swapping for audio buffers

# --- Debug: Allocation tracking in audio callback ---
assert_no_alloc = "1.1"

# --- Database ---
rusqlite = { version = "0.32", features = ["bundled"] }  # Loudness metadata persistence

# --- Utilities ---
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dotenv = "0.15"
sha2 = "0.10"
hex = "0.4"
crc32fast = "1.4"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
quick-xml = { version = "0.36", features = ["serialize"] }
ncm-api-rs = "0.1"
serde_urlencoded = "0.7"

# --- Optional: PyO3 for backward compat ---
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[dev-dependencies]
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }

[features]
default = []
python = ["pyo3", "numpy"]

[profile.audio-dev]
inherits = "dev"
debug = 1
incremental = true
codegen-units = 256

[profile.audio-dev.package.audio_engine]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
# Use RUSTFLAGS="-C target-cpu=native" for CPU-specific optimizations

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true

[profile.release.build-override]
opt-level = 3

[package.metadata.vcpkg]
dependencies = ["soxr"]

[build-dependencies]
pkg-config = "0.3"
vcpkg = "0.2"
