[package]
name = "audio-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
audio-runtime-paths = { path = "../../../crates/audio-runtime-paths" }
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools", "tray-icon"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
